test/files/neg/forward.check
forward.scala:8: error: forward reference to value x defined on line 9 extends over definition of value x
    def f: Int = x;
                 ^
forward.scala:12: error: forward reference to method g defined on line 14 extends over definition of value x
    def f: Int = g;
                 ^
forward.scala:17: error: forward reference to method g defined on line 19 extends over definition of variable x
    def f: Int = g;
                 ^
forward.scala:29: error: forward reference to value ec defined on line 32 extends over definition of value z
      a <- fInt
        ^
4 errors
